--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,4 @@
-sources:
+removed_sources:
   gnome-tweak-tool-3.6.1.tar.xz: 2deb40feaa216c8cba3b81a873edcca795c766e2
+sources:
+  gnome-tweak-tool-3.17.1.tar.xz: e10259f9104a2d5ca51569be2652a9f7ab64b0f8
